--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@ auto get database url
 add currency validation + amount update
 edit costs groups not working
 set time to current time, not last used time
+reverse groups display sorting
 set groups for whole reciept
 sortable columns
 
