added new compilation table to make it easier to add header stats

--- a/TODO
+++ b/TODO
@@ -11,4 +11,4 @@ regular db backups
 csv export
 regular csv export
 
-configurable header
+configurable header - expand the compilation class' expression field
